#18 Fixed the bug where the chat window was cropping in mobile view

--- a/src/style.scss
+++ b/src/style.scss
@@ -156,7 +156,7 @@
   #tarka-chat {
     bottom: 10px;
     right: 10px;
-    .container {
+    .t-container {
       width: calc(100vw - 20px);
     }
   }
